--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 .roboto-thin {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
