--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@ h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: gold
   }
 
-.roboto-thin {
+  * {
+    background-color: black;
+  }
+
+  .roboto-thin {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
