--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
+
+html {
+    background-color: #222222;
+  }
+  
 h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: gold
+    color: #FFAF45;
   }
 
-  * {
-    background-color: black;
-  }
 
   .roboto-thin {
     font-family: "Roboto", sans-serif;
